# Page-Analyzer

./: .gitignore  Makefile  README.md  database.sql  pyproject.toml
page_analyzer/: __init__.py  app.py  db.py  parser.py  validator.py
page_analyzer/templates/: base.html  index.html  url.html  urls.html
templates/: index.html
